fixed text align for expertise header

--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,16 +1,17 @@
-.caption-container {
+.home-container {
   background-color: #ffffff;
-  font-weight: regular;
   color: #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
   margin: 0;
-  padding: 5rem;
+  padding: 5rem 0 5rem 0;
 }
 
 .expertise-container {
   display: flex;
   justify-content: center;
-  margin-left: 2rem;
-  margin-right: 2rem;
 }
 
 .expertise-img {
@@ -57,13 +58,8 @@
   transition: opacity 0.3s;
 }
 
-.expertise-title {
-  display: flex;
-}
-
 .expertise-title h2 {
-  margin-left: 5.5rem;
   color: #01579b;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.1rem;
   background-color: #ffffff;
 }
